--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,39 +1,56 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 20px 0 100px 0;
-    padding: 0;
+}
+  
+.gradient {
+    /* Fallback color */
+    background-color: #FAEBD7; /* Antique White */
+  
+    /* Combine gradient and texture with background-blend-mode */
+    background-image: linear-gradient(to bottom, #FAEBD7, #E4D9C1), url('texture.png');
+    background-repeat: repeat; /* Repeat the texture image */
+    background-blend-mode: multiply; /* Multiply the texture with the gradient */
+    opacity: 0.5; /* Adjust the opacity of the overall effect if needed */
 }
 
 .containera {
-    max-width: 960px;
-    margin: 0 auto;
+    max-width: 100%;
+    margin: 20px auto 100px auto; /* Adjust margin for better spacing */
     padding: 20px;
 }
 
 .page-title {
     text-align: center;
+    font-size: 2rem; /* Decrease font size for better mobile viewing */
+    font-weight: bold;
+    margin-bottom: 20px; /* Add margin-bottom for spacing */
 }
 
 .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     grid-gap: 20px;
 }
 
 .image {
-    width: 100%;
     border-radius: 8px;
     overflow: hidden;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+}
+
+.image:hover {
+    transform: scale(1.05);
 }
 
 .image img {
     width: 100%;
     height: auto;
-    transition: transform 0.3s ease-in-out;
+    transition: filter 0.3s ease-in-out; 
 }
 
-.image img:hover {
-    transform: scale(1.1);
+.image:active img {
+    filter: brightness(115%);
 }
 
 h1 {
@@ -43,5 +60,7 @@ h1 {
 }
 
 h4 {
-     font-weight: bold;
+    font-weight: bold;
+    margin-top: 10px;
+    text-align: center;
 }
